Version 2.1.0 * Updated spring to 3.2.5